# zippp

./: .gitignore  BenchmarkCMakeLists.txt.in  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp-all.yml  ccpp-clang.yml  ccpp-gcc.yml  ccpp-windows.yml  ccpp.yml
benchmarks/: zippp_benchmarks.cpp
include/zippp/: zip.h
tests/: zip_test.cpp
